--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,14 +22,15 @@ jobs:
           npm install
           npm run build
 
-      - name: Configure AWS credentials
-        uses: aws-actions/configure-aws-credentials@v4
-        with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: eu-west-1
-
-      - name: Upload to S3
+      - name: Set up Bunny CLI and upload
+        env:
+          BUNNY_API: ${{ secrets.BUNNY_API }}
+          BUNNY_API_STORAGE: ${{ secrets.BUNNY_API_STORAGE }}
+          BUNNY_STORAGE: ${{ env.BUNNY_STORAGE }}
+          BUNNY_PULL_ZONE: ${{ env.BUNNY_PULL_ZONE }}
         run: |
-          aws s3 mv ./dist/index.html s3://klr.io/index.html --grants read=uri=http://acs.amazonaws.com/groups/global/AllUsers --cache-control 'public, must-revalidate, proxy-revalidate, max-age=60'
-          aws s3 sync ./dist/ s3://klr.io/ --acl public-read --exclude 'index.html'
+          npm install -g bnycdn
+          bnycdn key set default $BUNNY_API
+          bnycdn key set $BUNNY_STORAGE $BUNNY_API_STORAGE --type=storages
+          bnycdn cp -R -s $BUNNY_STORAGE ./dist /$BUNNY_STORAGE/
+          bnycdn pz purge -t $BUNNY_PULL_ZONE
