--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,15 +22,12 @@ jobs:
           npm install
           npm run build
 
-      - name: Set up Bunny CLI and upload
+      - name: Deploy to Edge Storage
+        uses: own3d/bunny-action@main
         env:
-          BUNNY_API: ${{ secrets.BUNNY_API }}
-          BUNNY_API_STORAGE: ${{ secrets.BUNNY_API_STORAGE }}
-          BUNNY_STORAGE: ${{ env.BUNNY_STORAGE }}
-          BUNNY_PULL_ZONE: ${{ env.BUNNY_PULL_ZONE }}
-        run: |
-          npm install -g bnycdn
-          bnycdn key set default $BUNNY_API
-          bnycdn key set $BUNNY_STORAGE $BUNNY_API_STORAGE --type=storages
-          bnycdn cp -R -s $BUNNY_STORAGE ./dist /$BUNNY_STORAGE/
-          bnycdn pz purge -t $BUNNY_PULL_ZONE
+          BUNNY_API_ACCESS_KEY: ${{ secrets.BUNNY_API }}
+          BUNNY_STORAGE_USERNAME: ${{ env.BUNNY_STORAGE }}
+          BUNNY_STORAGE_PASSWORD: ${{ secrets.BUNNY_API_STORAGE }}
+          BUNNY_PULL_ZONE_ID: ${{ env.BUNNY_PULL_ZONE_ID }}
+        with:
+          args: deploy --dir=dist
