--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,10 +24,13 @@ jobs:
 
       - name: Deploy to BunnyCDN
         uses: ayeressian/bunnycdn-storage-deploy@v2.3.0
+        env:
+          BUNNY_STORAGE: ${{ env.BUNNY_STORAGE }}
+          BUNNY_PULL_ZONE_ID: ${{ env.BUNNY_PULL_ZONE_ID }}
         with:
           source: "dist"
           storageZoneName: "${{ env.BUNNY_STORAGE }}"
-          storagePassword: "${{ secrets.BUNNY_STORAGE }}"
+          storagePassword: "${{ secrets.BUNNY_API_STORAGE }}"
           accessKey: "${{ secrets.BUNNY_API }}"
           pullZoneId: "${{ env.BUNNY_PULL_ZONE_ID }}"
           upload: "true"
