--- a/package.json
+++ b/package.json
@@ -4,14 +4,14 @@
   "description": "Personal website",
   "scripts": {
     "dev": "parcel ./src/index.html",
-    "build": "parcel build ./src/index.html && cp ./src/favicon.ico ./dist/favicon.ico"
+    "build": "parcel build ./src/index.html && cp ./src/favicon.ico ./dist/favicon.ico && cp ./src/robots.txt ./dist/robots.txt"
   },
   "author": "Karl Laurentius Roos",
   "license": "ISC",
   "dependencies": {},
   "devDependencies": {
-    "@parcel/packager-raw-url": "^2.12.0",
-    "@parcel/transformer-jsonld": "^2.12.0",
-    "parcel": "^2.12.0"
+    "@parcel/packager-raw-url": "^2.15.2",
+    "@parcel/transformer-jsonld": "^2.15.2",
+    "parcel": "^2.15.2"
   }
 }
